--- a/admin/index.html
+++ b/admin/index.html
@@ -86,8 +86,7 @@
           button: null,
           overlay: null,
           nav: null,
-          navParent: null,
-          navNextSibling: null
+          panel: null
         };
 
         let applyScheduled = false;
