--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,369 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TextMyLink CMS</title>
+    <style>
+      :root {
+        color-scheme: light;
+      }
+
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
+
+      html,
+      body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        min-height: 100%;
+        background: #f8fafc;
+        color: #0f172a;
+        font-family: "Inter", "Segoe UI", system-ui, -apple-system, BlinkMacSystemFont,
+          "Helvetica Neue", Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        line-height: 1.5;
+        font-size: 16px;
+      }
+
+      body {
+        overflow-x: hidden;
+      }
+
+      #nc-root {
+        min-height: 100vh;
+        padding-top: 0;
+      }
+
+      #nc-root input,
+      #nc-root textarea,
+      #nc-root select,
+      #nc-root button {
+        font-family: inherit;
+      }
+
+      #cms-mobile-toolbar,
+      #cms-mobile-collections-button,
+      #cms-mobile-collections-overlay,
+      #cms-mobile-create-post {
+        display: none;
+      }
+
+      #cms-mobile-collections-button .cms-mobile-collections-button__label {
+        line-height: 1;
+      }
+
+      #cms-mobile-collections-button .cms-mobile-collections-button__icon {
+        font-size: 1.05rem;
+        line-height: 1;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      @media (max-width: 900px) {
+        body.cms-collections-open {
+          overflow: hidden;
+        }
+
+        #nc-root {
+          overflow-x: hidden;
+          padding-top: 5.75rem;
+          padding-inline: clamp(0.75rem, 4vw, 1.75rem);
+        }
+
+        #cms-mobile-toolbar {
+          position: fixed;
+          top: 0;
+          left: 0;
+          right: 0;
+          z-index: 1003;
+          display: flex;
+          justify-content: flex-end;
+          gap: 0.75rem;
+          align-items: center;
+          padding: 0.65rem 0.75rem;
+          background: rgba(248, 250, 252, 0.96);
+          backdrop-filter: blur(12px);
+          border-bottom: 1px solid rgba(148, 163, 184, 0.28);
+        }
+
+        #cms-mobile-collections-button {
+          position: static;
+          margin: 0;
+          flex: 0 0 auto;
+          display: inline-flex;
+          align-items: center;
+          gap: 0.4rem;
+          padding: 0.55rem 0.9rem;
+          border-radius: 999px;
+          border: none;
+          background: #1f2937;
+          color: #fff;
+          font-size: 0.9rem;
+          font-weight: 600;
+          box-shadow: 0 10px 24px rgba(15, 23, 42, 0.18);
+          cursor: pointer;
+        }
+
+        #cms-mobile-collections-button span[aria-hidden="true"] {
+          font-size: 1.05rem;
+          line-height: 1;
+        }
+
+        body.cms-collections-open #cms-mobile-collections-button {
+          background: #3730a3;
+        }
+
+        #cms-mobile-create-post {
+          position: fixed;
+          right: 1rem;
+          bottom: calc(1.15rem + env(safe-area-inset-bottom, 0));
+          z-index: 1003;
+          display: none;
+          align-items: center;
+          gap: 0.45rem;
+          padding: 0.65rem 1.15rem;
+          border-radius: 999px;
+          border: none;
+          background: #2563eb;
+          color: #fff;
+          font-weight: 600;
+          font-size: 0.95rem;
+          box-shadow: 0 12px 26px rgba(37, 99, 235, 0.22);
+          text-decoration: none;
+          cursor: pointer;
+        }
+
+        #cms-mobile-create-post span[aria-hidden="true"] {
+          font-size: 1.15rem;
+          line-height: 1;
+        }
+
+        #cms-mobile-create-post.visible {
+          display: inline-flex;
+        }
+
+        #cms-mobile-collections-overlay {
+          position: fixed;
+          inset: 0;
+          background: rgba(15, 23, 42, 0.35);
+          z-index: 1001;
+        }
+
+        body.cms-collections-open #cms-mobile-collections-overlay {
+          display: block;
+        }
+
+        [data-mobile-collections-panel] {
+          position: fixed !important;
+          top: 0;
+          left: 0;
+          bottom: 0;
+          width: min(82vw, 320px);
+          max-width: 92vw;
+          background: #ffffff;
+          z-index: 1002;
+          transform: translateX(-110%);
+          transition: transform 0.25s ease;
+          box-shadow: 12px 0 32px rgba(15, 23, 42, 0.28);
+          padding: 1.25rem 1rem;
+          overflow-y: auto;
+        }
+
+        body.cms-collections-open [data-mobile-collections-panel] {
+          transform: translateX(0);
+        }
+
+        #nc-root header[role="banner"],
+        #nc-root header[role="toolbar"],
+        #nc-root [class*="EditorHeader"],
+        #nc-root [class*="CollectionHeader"] {
+          display: flex !important;
+          flex-direction: column !important;
+          align-items: stretch !important;
+          gap: 0.75rem !important;
+          width: 100% !important;
+        }
+
+        #nc-root header[role="banner"] > *,
+        #nc-root header[role="toolbar"] > *,
+        #nc-root [class*="EditorHeader"] > *,
+        #nc-root [class*="CollectionHeader"] > * {
+          width: 100% !important;
+          max-width: 100% !important;
+        }
+
+        #nc-root nav[role="navigation"],
+        #nc-root [class*="EditorToolbar"],
+        #nc-root [class*="HeaderToolbar"],
+        #nc-root [class*="CollectionControls"] {
+          display: flex !important;
+          flex-wrap: wrap !important;
+          justify-content: flex-start !important;
+          gap: 0.6rem !important;
+        }
+
+        #nc-root nav[role="navigation"] a,
+        #nc-root nav[role="navigation"] button,
+        #nc-root [class*="EditorToolbar"] > *,
+        #nc-root [class*="HeaderToolbar"] > * {
+          flex: 1 1 140px !important;
+          min-width: 0 !important;
+        }
+
+        #nc-root .nc-editor-status,
+        #nc-root [class*="EditorStatus"] {
+          order: -1;
+        }
+
+        #nc-root [class*="ControlPane"] label {
+          font-size: 0.85rem !important;
+        }
+
+        #nc-root [class*="ControlPane"] textarea,
+        #nc-root [class*="ControlPane"] input {
+          min-height: 42px;
+        }
+
+        #nc-root [data-testid="editor-pane"],
+        #nc-root main,
+        #nc-root [role="main"] {
+          margin-left: 0 !important;
+          width: 100% !important;
+          max-width: 100% !important;
+        }
+
+        #nc-root [data-testid="app-container"],
+        #nc-root [data-testid="workspace"],
+        #nc-root [class*="Layout"],
+        #nc-root [class*="Container"],
+        #nc-root [data-testid="preview-pane"],
+        #nc-root [class*="PreviewPane"] {
+          flex-direction: column !important;
+          align-items: stretch !important;
+          width: 100% !important;
+        }
+
+        #nc-root [class*="Pane"],
+        #nc-root [class*="EditorPane"],
+        #nc-root [class*="PreviewPane"] {
+          max-width: 100% !important;
+        }
+
+        #nc-root [class*="MediaLibrary"],
+        #nc-root [role="dialog"] {
+          width: 100% !important;
+          max-width: 100% !important;
+          left: 0 !important;
+          right: 0 !important;
+          margin: 0 !important;
+        }
+
+        #nc-root [role="dialog"] .nc-media-library-content,
+        #nc-root [role="dialog"] [class*="MediaLibraryContent"] {
+          max-width: 100% !important;
+        }
+
+        #nc-root [role="dialog"] button,
+        #nc-root [role="dialog"] input,
+        #nc-root [role="dialog"] label {
+          font-size: 16px !important;
+        }
+      }
+
+      @media (max-width: 768px) {
+        #nc-root {
+          padding-inline: clamp(0.75rem, 3vw, 1.5rem);
+        }
+
+        #nc-root [class*="ControlPane"],
+        #nc-root [class*="EditorPane"],
+        #nc-root [data-testid="editor-pane"],
+        #nc-root main,
+        #nc-root [role="main"] {
+          padding-inline: 0 !important;
+          width: 100% !important;
+          max-width: 100% !important;
+        }
+
+        #nc-root [class*="ControlPane"] [class*="fields"],
+        #nc-root .nc-control-pane,
+        #nc-root .nc-control-pane-scroll,
+        #nc-root .nc-control-fields,
+        #nc-root [class*="ControlPane"] .nc-control-field,
+        #nc-root [class*="ControlPane"] [class*="control-field"],
+        #nc-root [class*="Widget"] {
+          display: flex !important;
+          flex-direction: column !important;
+          gap: 0.75rem !important;
+          width: 100% !important;
+          max-width: 100% !important;
+        }
+
+        #nc-root input,
+        #nc-root textarea,
+        #nc-root select,
+        #nc-root button,
+        #nc-root .nc-button,
+        #nc-root .nc-btn {
+          width: 100% !important;
+          max-width: 100% !important;
+        }
+
+        #nc-root textarea {
+          min-height: 130px;
+        }
+
+        #nc-root header[role="banner"],
+        #nc-root header[role="toolbar"],
+        #nc-root [class*="EditorHeader"],
+        #nc-root [class*="CollectionHeader"],
+        #nc-root nav[role="navigation"],
+        #nc-root [class*="Toolbar"],
+        #nc-root [class*="Controls"] {
+          gap: 0.5rem !important;
+        }
+
+        #nc-root nav[role="navigation"] > *,
+        #nc-root [class*="Toolbar"] > *,
+        #nc-root [class*="Controls"] > * {
+          flex: 1 1 100% !important;
+          width: 100% !important;
+        }
+
+        #nc-root table {
+          display: block;
+          width: 100%;
+          overflow-x: auto;
+          -webkit-overflow-scrolling: touch;
+        }
+      }
+
+      @media (max-width: 480px) {
+        #nc-root {
+          padding-inline: clamp(0.75rem, 5vw, 1.15rem);
+          padding-top: 5.25rem;
+        }
+
+        #cms-mobile-toolbar {
+          padding: 0.5rem 0.75rem;
+          gap: 0.5rem;
+        }
+
+        #cms-mobile-collections-button {
+          font-size: 0.85rem;
+          padding: 0.5rem 0.85rem;
+        }
+
+        #cms-mobile-create-post {
+          right: 0.85rem;
+          padding: 0.6rem 1rem;
+          font-size: 0.9rem;
+        }
+      }
+    </style>
   </head>
   <body>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -301,7 +664,9 @@
           button.id = "cms-mobile-collections-button";
           button.type = "button";
           button.setAttribute("aria-haspopup", "true");
-          button.innerHTML = '<span aria-hidden="true">â˜°</span> Collections';
+          button.innerHTML =
+            '<span aria-hidden="true" class="cms-mobile-collections-button__icon">☰</span>' +
+            '<span class="cms-mobile-collections-button__label">Collections</span>';
           button.addEventListener("click", () => {
             const shouldOpen = !document.body.classList.contains("cms-collections-open");
             setCollectionsOpen(shouldOpen, state);
@@ -515,218 +880,3 @@
     </script>
   </body>
 </html>
-    <style>
-      #cms-mobile-toolbar,
-      #cms-mobile-collections-button,
-      #cms-mobile-collections-overlay,
-      #cms-mobile-create-post {
-        display: none;
-      }
-
-      @media (max-width: 900px) {
-        body.cms-collections-open {
-          overflow: hidden;
-        }
-
-        #nc-root {
-          overflow-x: hidden;
-          padding-top: 5.75rem;
-        }
-
-        #cms-mobile-toolbar {
-          position: fixed;
-          top: 0;
-          left: 0;
-          right: 0;
-          z-index: 1003;
-          display: flex;
-          justify-content: flex-end;
-          gap: 0.75rem;
-          align-items: center;
-          padding: 0.65rem 0.75rem;
-          background: rgba(248, 250, 252, 0.96);
-          backdrop-filter: blur(12px);
-          border-bottom: 1px solid rgba(148, 163, 184, 0.28);
-        }
-
-        #cms-mobile-collections-button {
-          position: static;
-          margin: 0;
-          flex: 0 0 auto;
-          display: inline-flex;
-          align-items: center;
-          gap: 0.4rem;
-          padding: 0.55rem 0.9rem;
-          border-radius: 999px;
-          border: none;
-          background: #1f2937;
-          color: #fff;
-          font-size: 0.9rem;
-          font-weight: 600;
-          box-shadow: 0 10px 24px rgba(15, 23, 42, 0.18);
-          cursor: pointer;
-        }
-
-        #cms-mobile-collections-button span[aria-hidden="true"] {
-          font-size: 1.05rem;
-          line-height: 1;
-        }
-
-        body.cms-collections-open #cms-mobile-collections-button {
-          background: #3730a3;
-        }
-
-        #cms-mobile-create-post {
-          position: fixed;
-          right: 1rem;
-          bottom: calc(1.15rem + env(safe-area-inset-bottom, 0));
-          z-index: 1003;
-          display: none;
-          align-items: center;
-          gap: 0.45rem;
-          padding: 0.65rem 1.15rem;
-          border-radius: 999px;
-          border: none;
-          background: #2563eb;
-          color: #fff;
-          font-weight: 600;
-          font-size: 0.95rem;
-          box-shadow: 0 12px 26px rgba(37, 99, 235, 0.22);
-          text-decoration: none;
-          cursor: pointer;
-        }
-
-        #cms-mobile-create-post span[aria-hidden="true"] {
-          font-size: 1.15rem;
-          line-height: 1;
-        }
-
-        #cms-mobile-create-post.visible {
-          display: inline-flex;
-        }
-
-        #cms-mobile-collections-overlay {
-          position: fixed;
-          inset: 0;
-          background: rgba(15, 23, 42, 0.35);
-          z-index: 1001;
-        }
-
-        body.cms-collections-open #cms-mobile-collections-overlay {
-          display: block;
-        }
-
-        [data-mobile-collections-panel] {
-          position: fixed !important;
-          top: 0;
-          left: 0;
-          bottom: 0;
-          width: min(82vw, 320px);
-          max-width: 92vw;
-          background: #ffffff;
-          z-index: 1002;
-          transform: translateX(-110%);
-          transition: transform 0.25s ease;
-          box-shadow: 12px 0 32px rgba(15, 23, 42, 0.28);
-          padding: 1.25rem 1rem;
-          overflow-y: auto;
-        }
-
-        body.cms-collections-open [data-mobile-collections-panel] {
-          transform: translateX(0);
-        }
-
-        #nc-root header[role="banner"],
-        #nc-root header[role="toolbar"],
-        #nc-root [class*="EditorHeader"],
-        #nc-root [class*="CollectionHeader"] {
-          display: flex !important;
-          flex-direction: column !important;
-          align-items: stretch !important;
-          gap: 0.75rem !important;
-          width: 100% !important;
-        }
-
-        #nc-root header[role="banner"] > *,
-        #nc-root header[role="toolbar"] > *,
-        #nc-root [class*="EditorHeader"] > *,
-        #nc-root [class*="CollectionHeader"] > * {
-          width: 100% !important;
-          max-width: 100% !important;
-        }
-
-        #nc-root nav[role="navigation"],
-        #nc-root [class*="EditorToolbar"],
-        #nc-root [class*="HeaderToolbar"],
-        #nc-root [class*="CollectionControls"] {
-          display: flex !important;
-          flex-wrap: wrap !important;
-          justify-content: flex-start !important;
-          gap: 0.6rem !important;
-        }
-
-        #nc-root nav[role="navigation"] a,
-        #nc-root nav[role="navigation"] button,
-        #nc-root [class*="EditorToolbar"] > *,
-        #nc-root [class*="HeaderToolbar"] > * {
-          flex: 1 1 140px !important;
-          min-width: 0 !important;
-        }
-
-        #nc-root .nc-editor-status,
-        #nc-root [class*="EditorStatus"] {
-          order: -1;
-        }
-
-        #nc-root [class*="ControlPane"] label {
-          font-size: 0.85rem !important;
-        }
-
-        #nc-root [class*="ControlPane"] textarea,
-        #nc-root [class*="ControlPane"] input {
-          min-height: 42px;
-        }
-
-        #nc-root [data-testid="editor-pane"],
-        #nc-root main,
-        #nc-root [role="main"] {
-          margin-left: 0 !important;
-          width: 100% !important;
-          max-width: 100% !important;
-        }
-
-        #nc-root [data-testid="app-container"],
-        #nc-root [data-testid="workspace"],
-        #nc-root [class*="Layout"],
-        #nc-root [class*="Container"] {
-          flex-direction: column !important;
-          align-items: stretch !important;
-          width: 100% !important;
-        }
-
-        #nc-root [class*="Pane"],
-        #nc-root [class*="EditorPane"] {
-          max-width: 100% !important;
-        }
-
-        #nc-root [class*="MediaLibrary"],
-        #nc-root [role="dialog"] {
-          width: 100% !important;
-          max-width: 100% !important;
-          left: 0 !important;
-          right: 0 !important;
-          margin: 0 !important;
-        }
-
-        #nc-root [role="dialog"] .nc-media-library-content,
-        #nc-root [role="dialog"] [class*="MediaLibraryContent"] {
-          max-width: 100% !important;
-        }
-
-        #nc-root [role="dialog"] button,
-        #nc-root [role="dialog"] input,
-        #nc-root [role="dialog"] label {
-          font-size: 16px !important;
-        }
-      }
-    </style>
