--- a/admin/index.html
+++ b/admin/index.html
@@ -590,46 +590,46 @@
         }
         enforceAuthentication.initialized = true;
 
+        const identity = window.netlifyIdentity;
         let loginModalOpen = false;
 
         const requireLogin = () => {
-          if (window.netlifyIdentity.currentUser() || loginModalOpen) {
+          if (identity.currentUser() || loginModalOpen) {
             return;
           }
-          window.netlifyIdentity.open("login");
+          identity.open("login");
         };
 
-        window.netlifyIdentity.on("init", (user) => {
+        identity.on("init", (user) => {
           if (user) {
             startCms();
           } else {
-            requireLogin();
-          }
-        });
-
-        window.netlifyIdentity.on("open", () => {
-          loginModalOpen = true;
-        });
-
-        window.netlifyIdentity.on("login", () => {
-          startCms();
-          window.netlifyIdentity.close();
-        });
-
-        window.netlifyIdentity.on("logout", () => {
-          cmsHasStarted = false;
-          document.location.href = "/admin/";
-        });
-
-        window.netlifyIdentity.on("close", () => {
-          loginModalOpen = false;
-          if (!window.netlifyIdentity.currentUser()) {
             setTimeout(() => requireLogin(), 0);
           }
         });
 
-        requireLogin();
-        window.netlifyIdentity.init();
+        identity.on("open", () => {
+          loginModalOpen = true;
+        });
+
+        identity.on("login", () => {
+          startCms();
+          identity.close();
+        });
+
+        identity.on("logout", () => {
+          cmsHasStarted = false;
+          document.location.href = "/admin/";
+        });
+
+        identity.on("close", () => {
+          loginModalOpen = false;
+          if (!identity.currentUser()) {
+            setTimeout(() => requireLogin(), 0);
+          }
+        });
+
+        identity.init();
       }
 
       function setupIdentityUI() {
