--- a/admin/index.html
+++ b/admin/index.html
@@ -9,17 +9,19 @@
         color-scheme: light;
         font-family: "Inter", "Segoe UI", -apple-system, BlinkMacSystemFont,
           "Helvetica Neue", Arial, sans-serif;
-        --shell-bg: #f4f6fb;
+        --shell-bg: #f1f5f9;
         --shell-surface: #ffffff;
         --shell-text: #0f172a;
         --shell-text-muted: #64748b;
+        --shell-border: #e2e8f0;
         --shell-primary: #2563eb;
         --shell-primary-strong: #1d4ed8;
-        --shell-border: #e2e8f0;
-        --shell-shadow: 0 14px 32px rgba(15, 23, 42, 0.14);
+        --shell-header-height: 64px;
       }
 
-      * {
+      *,
+      *::before,
+      *::after {
         box-sizing: border-box;
       }
 
@@ -40,16 +42,19 @@
 
       button {
         font: inherit;
+        background: none;
+        border: none;
+        padding: 0;
       }
 
       #nc-root {
         min-height: 100vh;
-        width: 100%;
-        padding: calc(4.5rem + env(safe-area-inset-top, 0px)) 1rem
-          calc(3.25rem + env(safe-area-inset-bottom, 0px));
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        padding: calc(var(--shell-header-height) + env(safe-area-inset-top, 0px) +
+            1rem)
+          1rem calc(3.5rem + env(safe-area-inset-bottom, 0px));
       }
 
       #nc-root > * {
@@ -66,60 +71,52 @@
         align-items: center;
         gap: 0.75rem;
         padding: calc(0.75rem + env(safe-area-inset-top, 0px)) 1rem 0.75rem;
-        background: rgba(255, 255, 255, 0.92);
-        backdrop-filter: blur(16px);
-        border-bottom: 1px solid rgba(148, 163, 184, 0.18);
-        box-shadow: 0 10px 28px rgba(15, 23, 42, 0.12);
+        background: var(--shell-surface);
+        border-bottom: 1px solid rgba(148, 163, 184, 0.24);
+        box-shadow: 0 8px 24px rgba(15, 23, 42, 0.08);
       }
 
       .cms-shell-menu {
+        width: 44px;
+        height: 44px;
+        border-radius: 12px;
+        border: 1px solid var(--shell-border);
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        gap: 0.45rem;
-        padding: 0.55rem 0.9rem;
-        border: none;
-        border-radius: 12px;
-        background: #111827;
-        color: #fff;
-        font-weight: 600;
-        font-size: 0.95rem;
+        color: var(--shell-text);
+        background: var(--shell-surface);
         cursor: pointer;
       }
 
       .cms-shell-menu::before {
         content: "";
-        display: block;
-        width: 16px;
+        width: 18px;
         height: 2px;
         background: currentColor;
         border-radius: 999px;
-        box-shadow: 0 5px 0 currentColor, 0 -5px 0 currentColor;
-      }
-
-      .cms-shell-menu__label {
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-        font-size: 0.75rem;
+        box-shadow: 0 6px 0 currentColor, 0 -6px 0 currentColor;
       }
 
       .cms-shell-title {
+        flex: 1 1 auto;
+        min-width: 0;
         display: flex;
         flex-direction: column;
-        min-width: 0;
+        gap: 0.15rem;
       }
 
       .cms-shell-title__eyebrow {
         font-size: 0.7rem;
-        letter-spacing: 0.22em;
+        letter-spacing: 0.14em;
         text-transform: uppercase;
         color: var(--shell-text-muted);
-        font-weight: 700;
+        font-weight: 600;
       }
 
       .cms-shell-title__route {
         font-size: 1.05rem;
-        font-weight: 700;
+        font-weight: 600;
         color: var(--shell-text);
         white-space: nowrap;
         overflow: hidden;
@@ -127,22 +124,21 @@
       }
 
       .cms-shell-primary {
-        margin-left: auto;
         display: inline-flex;
         align-items: center;
         justify-content: center;
-        padding: 0.55rem 1.1rem;
+        gap: 0.3rem;
+        padding: 0.6rem 1.1rem;
         border-radius: 999px;
         background: var(--shell-primary);
         color: #fff;
         font-weight: 600;
         font-size: 0.95rem;
-        transition: background 0.2s ease, transform 0.2s ease;
-        box-shadow: 0 12px 26px rgba(37, 99, 235, 0.22);
+        transition: background 0.2s ease;
       }
 
       .cms-shell-primary:active {
-        transform: scale(0.97);
+        background: var(--shell-primary-strong);
       }
 
       .cms-shell-primary[hidden] {
@@ -157,11 +153,7 @@
         position: fixed;
         inset: 0;
         background: rgba(15, 23, 42, 0.45);
-        z-index: 998;
-        display: none;
-      }
-
-      #cms-shell-overlay[hidden] {
+        z-index: 900;
         display: none;
       }
 
@@ -178,16 +170,16 @@
         top: 0;
         left: 0;
         bottom: 0;
-        width: min(88vw, 340px);
+        width: min(85vw, 320px);
         background: var(--shell-surface);
-        padding: calc(1rem + env(safe-area-inset-top, 0px)) 1.15rem 1.6rem;
-        box-shadow: 18px 0 42px rgba(15, 23, 42, 0.24);
-        transform: translateX(-110%);
-        transition: transform 0.22s ease;
-        z-index: 999;
+        padding: calc(1rem + env(safe-area-inset-top, 0px)) 1rem 1.5rem;
+        box-shadow: 24px 0 48px rgba(15, 23, 42, 0.18);
+        transform: translateX(-100%);
+        transition: transform 0.25s ease;
+        z-index: 950;
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 1.5rem;
       }
 
       body.cms-shell-drawer-open #cms-shell-drawer {
@@ -198,22 +190,63 @@
         pointer-events: none;
       }
 
-      .cms-shell-drawer__header h2 {
-        margin: 0;
-        font-size: 1.05rem;
+      .cms-shell-drawer__top {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 1rem;
+      }
+
+      .cms-shell-drawer__title {
+        display: flex;
+        flex-direction: column;
+        gap: 0.2rem;
+      }
+
+      .cms-shell-drawer__title span {
+        font-size: 0.7rem;
+        letter-spacing: 0.14em;
+        text-transform: uppercase;
+        color: var(--shell-text-muted);
+        font-weight: 600;
+      }
+
+      .cms-shell-drawer__title strong {
+        font-size: 1.1rem;
         font-weight: 700;
       }
 
-      .cms-shell-drawer__header p {
-        margin: 0.2rem 0 0;
-        font-size: 0.85rem;
+      .cms-shell-drawer__close {
         color: var(--shell-text-muted);
+        text-transform: uppercase;
+        letter-spacing: 0.08em;
+        font-size: 0.75rem;
+        font-weight: 600;
+        padding: 0.35rem 0.6rem;
+        border-radius: 8px;
+        border: 1px solid transparent;
+        cursor: pointer;
+      }
+
+      .cms-shell-drawer__close:active {
+        color: var(--shell-text);
       }
 
       .cms-shell-drawer__content {
         display: flex;
         flex-direction: column;
         gap: 0.6rem;
+        overflow-y: auto;
+      }
+
+      .cms-shell-drawer__content nav,
+      .cms-shell-drawer__content ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        gap: 0.45rem;
       }
 
       .cms-shell-drawer__content a,
@@ -221,18 +254,18 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 0.35rem;
+        gap: 0.4rem;
         padding: 0.7rem 0.85rem;
-        border-radius: 0.85rem;
-        background: rgba(148, 163, 184, 0.12);
-        border: 1px solid transparent;
+        border-radius: 12px;
+        background: #f8fafc;
+        border: 1px solid rgba(148, 163, 184, 0.16);
         font-weight: 600;
         font-size: 0.95rem;
       }
 
       .cms-shell-drawer__content a:hover,
       .cms-shell-drawer__content button:hover {
-        background: rgba(148, 163, 184, 0.22);
+        background: #e0ecff;
       }
 
       .cms-shell-empty {
@@ -253,8 +286,8 @@
       body.cms-shell-mobile #nc-root [class*="Controls"] {
         display: flex !important;
         flex-direction: column !important;
-        gap: 0.65rem !important;
         align-items: stretch !important;
+        gap: 0.75rem !important;
       }
 
       body.cms-shell-mobile #nc-root header[role="banner"] > *,
@@ -270,8 +303,8 @@
       body.cms-shell-mobile #nc-root [class*="Button"],
       body.cms-shell-mobile #nc-root [role="toolbar"] a {
         border-radius: 12px !important;
-        font-size: 1rem !important;
-        padding: 0.75rem 0.9rem !important;
+        font-size: 0.95rem !important;
+        min-height: 44px !important;
       }
 
       body.cms-shell-mobile #nc-root .nc-entryListingCard,
@@ -279,8 +312,8 @@
       body.cms-shell-mobile #nc-root [class*="Pane"],
       body.cms-shell-mobile #nc-root [class*="Workflow"] {
         border-radius: 18px !important;
-        box-shadow: var(--shell-shadow) !important;
-        border: 1px solid rgba(148, 163, 184, 0.16) !important;
+        box-shadow: 0 10px 24px rgba(15, 23, 42, 0.12) !important;
+        border: 1px solid rgba(148, 163, 184, 0.14) !important;
         background: var(--shell-surface) !important;
       }
 
@@ -296,8 +329,8 @@
       body.cms-shell-mobile #nc-root textarea,
       body.cms-shell-mobile #nc-root select {
         font-size: 1rem !important;
-        padding: 0.75rem 0.9rem !important;
-        border-radius: 0.95rem !important;
+        padding: 0.75rem !important;
+        border-radius: 12px !important;
         border: 1px solid var(--shell-border) !important;
         box-shadow: none !important;
       }
@@ -315,55 +348,68 @@
 
       body.cms-shell-mobile #nc-root tbody {
         display: grid;
-        gap: 0.8rem;
+        gap: 0.75rem;
         padding: 0;
         margin: 0;
       }
 
       body.cms-shell-mobile #nc-root tbody tr {
         display: grid;
-        gap: 0.45rem;
+        gap: 0.5rem;
         padding: 0.9rem 1rem;
-        border-radius: 1rem;
+        border-radius: 16px;
         background: var(--shell-surface);
-        box-shadow: 0 12px 26px rgba(15, 23, 42, 0.12);
-        border: 1px solid rgba(148, 163, 184, 0.14);
+        box-shadow: 0 10px 24px rgba(15, 23, 42, 0.1);
+        border: 1px solid rgba(148, 163, 184, 0.18);
       }
 
       body.cms-shell-mobile #nc-root td {
         display: flex;
         flex-direction: column;
-        gap: 0.1rem;
+        gap: 0.25rem;
         font-size: 0.95rem;
       }
 
       body.cms-shell-mobile #nc-root td::before {
         content: attr(data-header);
-        font-size: 0.68rem;
+        font-size: 0.7rem;
         letter-spacing: 0.16em;
         text-transform: uppercase;
         color: var(--shell-text-muted);
-        font-weight: 700;
+        font-weight: 600;
       }
 
       @media (min-width: 960px) {
+        :root {
+          --shell-header-height: 72px;
+        }
+
         #nc-root {
-          padding: 6rem 3.5rem 3.5rem;
+          padding: calc(var(--shell-header-height) + 1.5rem) 3rem 3rem;
+          max-width: 1100px;
+          margin: 0 auto;
         }
 
         .cms-shell-header {
-          padding: 1.1rem 3.5rem;
           position: sticky;
-          background: rgba(255, 255, 255, 0.95);
+          top: 0;
+          padding: 1rem 3rem;
+          box-shadow: none;
         }
 
         .cms-shell-menu {
           display: none;
         }
 
-        #cms-shell-overlay,
-        #cms-shell-drawer {
+        #cms-shell-overlay {
           display: none !important;
+        }
+
+        #cms-shell-drawer {
+          width: 320px;
+          border-radius: 16px;
+          border: 1px solid var(--shell-border);
+          box-shadow: 0 18px 38px rgba(15, 23, 42, 0.12);
         }
 
         body.cms-shell-drawer-open {
@@ -380,9 +426,7 @@
         type="button"
         aria-label="Open collections menu"
         aria-expanded="false"
-      >
-        <span class="cms-shell-menu__label">Menu</span>
-      </button>
+      ></button>
       <div class="cms-shell-title">
         <span class="cms-shell-title__eyebrow">TextMyLink</span>
         <span id="cms-shell-route" class="cms-shell-title__route">Admin</span>
@@ -392,7 +436,29 @@
       </a>
     </header>
     <div id="cms-shell-overlay" hidden></div>
-    <aside id="cms-shell-drawer" aria-hidden="true"></aside>
+    <aside
+      id="cms-shell-drawer"
+      aria-hidden="true"
+      role="navigation"
+      aria-label="Collections navigation"
+    >
+      <div class="cms-shell-drawer__top">
+        <div class="cms-shell-drawer__title">
+          <span>TextMyLink</span>
+          <strong>Collections</strong>
+        </div>
+        <button
+          id="cms-shell-drawer-close"
+          class="cms-shell-drawer__close"
+          type="button"
+        >
+          Close
+        </button>
+      </div>
+      <div class="cms-shell-drawer__content" data-cms-shell-nav>
+        <p class="cms-shell-empty">Collections load once ready.</p>
+      </div>
+    </aside>
     <div id="nc-root"></div>
 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -523,36 +589,31 @@
             tabs.style.display = "none";
           }
 
-          const links = modal.querySelectorAll("[data-netlify-identity-button]");
-          links.forEach((button) => {
-            const text = (button.textContent || "").toLowerCase();
-            if (
-              text.includes("sign up") ||
-              text.includes("signup") ||
-              text.includes("register")
-            ) {
-              button.remove();
-            }
-          });
-
-          const heading = modal.querySelector(".netlify-identity-title");
-          if (heading) {
-            heading.textContent = "Log in";
+          const content = modal.querySelector(".netlify-identity-modal-pane");
+          if (content) {
+            content.style.padding = "1.5rem 1.5rem 2rem";
           }
+
+          const heading = modal.querySelector(".netlify-identity-form h2");
+          if (heading) {
+            heading.textContent = "Sign in to edit";
+          }
+
+          const switchers = modal.querySelectorAll(
+            ".netlify-identity-form .netlify-identity-link"
+          );
+          switchers.forEach((link) => {
+            link.style.display = "none";
+          });
         };
 
-        window.netlifyIdentity.on("open", () => {
-          simplifyModal();
-          const observer = new MutationObserver(() => simplifyModal());
-          const modal = document.querySelector(".netlify-identity-modal");
-          if (modal) {
-            observer.observe(modal, { childList: true, subtree: true });
-          }
+        const observer = new MutationObserver(simplifyModal);
+        observer.observe(document.body, {
+          childList: true,
+          subtree: true,
         });
+        simplifyModal();
       }
-
-      setupIdentityUI();
-      enforceAuthentication();
 
       function setupMobileShell() {
         if (setupMobileShell.initialized) {
@@ -565,9 +626,10 @@
           menu: document.getElementById("cms-shell-menu"),
           overlay: document.getElementById("cms-shell-overlay"),
           drawer: document.getElementById("cms-shell-drawer"),
+          drawerClose: document.getElementById("cms-shell-drawer-close"),
           route: document.getElementById("cms-shell-route"),
           primary: document.getElementById("cms-shell-primary"),
-          navContainer: null,
+          navContainer: document.querySelector("[data-cms-shell-nav]"),
         };
 
         const MOBILE_QUERY = window.matchMedia("(max-width: 960px)");
@@ -580,12 +642,27 @@
           requestAnimationFrame(applyShellState);
         };
 
+        const updateHeaderOffset = () => {
+          if (!state.header) {
+            return;
+          }
+          const height = Math.ceil(
+            state.header.getBoundingClientRect().height
+          );
+          document.documentElement.style.setProperty(
+            "--shell-header-height",
+            `${height}px`
+          );
+        };
+
         const applyShellState = () => {
           scheduled = false;
           const root = document.getElementById("nc-root");
           if (!root) {
             return;
           }
+
+          updateHeaderOffset();
 
           const isMobile = MOBILE_QUERY.matches;
           document.body.classList.toggle("cms-shell-mobile", isMobile);
@@ -597,7 +674,12 @@
             return;
           }
 
-          ensureDrawerStructure();
+          if (!state.navContainer && state.drawer) {
+            state.navContainer = state.drawer.querySelector(
+              "[data-cms-shell-nav]"
+            );
+          }
+
           bindMenu();
           syncNavigation(root);
           updateRouteLabel();
@@ -607,46 +689,29 @@
         };
 
         const bindMenu = () => {
-          if (!state.menu || state.menu.dataset.bound === "true") {
-            return;
+          if (state.menu && state.menu.dataset.bound !== "true") {
+            state.menu.addEventListener("click", () => toggleDrawer());
+            state.menu.dataset.bound = "true";
           }
 
-          state.menu.addEventListener("click", () => toggleDrawer());
-
-          if (state.overlay) {
+          if (state.overlay && state.overlay.dataset.bound !== "true") {
             state.overlay.addEventListener("click", () => toggleDrawer(false));
+            state.overlay.dataset.bound = "true";
           }
 
-          if (state.drawer) {
+          if (state.drawer && state.drawer.dataset.bound !== "true") {
             state.drawer.addEventListener("click", (event) => {
               if (event.target.closest("a, button")) {
                 toggleDrawer(false);
               }
             });
+            state.drawer.dataset.bound = "true";
           }
 
-          state.menu.dataset.bound = "true";
-        };
-
-        const ensureDrawerStructure = () => {
-          if (!state.drawer || state.drawer.dataset.prepared === "true") {
-            return;
+          if (state.drawerClose && state.drawerClose.dataset.bound !== "true") {
+            state.drawerClose.addEventListener("click", () => toggleDrawer(false));
+            state.drawerClose.dataset.bound = "true";
           }
-
-          state.drawer.innerHTML = `
-            <div class="cms-shell-drawer__header">
-              <h2>Collections</h2>
-              <p>Pick something to work on.</p>
-            </div>
-            <div class="cms-shell-drawer__content" data-cms-shell-nav></div>
-          `;
-
-          state.navContainer = state.drawer.querySelector(
-            "[data-cms-shell-nav]"
-          );
-          state.drawer.dataset.prepared = "true";
-          state.drawer.setAttribute("role", "navigation");
-          state.drawer.setAttribute("aria-label", "Collections navigation");
         };
 
         const toggleDrawer = (force) => {
@@ -780,6 +845,10 @@
 
         MOBILE_QUERY.addEventListener("change", scheduleApply);
         window.addEventListener("hashchange", scheduleApply);
+        window.addEventListener("resize", () => {
+          updateHeaderOffset();
+          scheduleApply();
+        });
 
         const watchRoot = () => {
           const root = document.getElementById("nc-root");
@@ -913,6 +982,9 @@
 
         return "blog";
       }
+
+      enforceAuthentication();
+      setupIdentityUI();
     </script>
   </body>
 </html>
