--- a/admin/index.html
+++ b/admin/index.html
@@ -100,6 +100,12 @@
         padding: 0.5rem 1rem;
         box-sizing: border-box;
         display: none;
+        position: static !important;
+        inset: auto !important;
+        height: auto !important;
+        box-shadow: none !important;
+        z-index: auto !important;
+        transform: none !important;
       }
       body.cms-nav-open #nc-root.cms-mobile-root .cms-mobile-nav,
       body.cms-nav-open #nc-root.cms-mobile-root [data-testid="collection-sidebar"],
